--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "seed": "ts-node server/database/seed.ts"
   },
   "scripts": {
-    "start": "nuxt start PORT=3004",
+    "start": "nuxt start",
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env.local ",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -15,10 +15,23 @@
     "lint:fix": "eslint . --fix",
     "test:unit": "vitest",
     "migrate": "npx prisma migrate dev --name init  --preview-feature  --schema server/database/schema.prisma",
-    "migratePro": "npx prisma migrate deploy  --preview-feature --schema server/database/schema.prisma",
-    "migrate3": "npx prisma migrate deploy --preview-feature --schema=./server/database/schema.prisma",
     "seed": "npx prisma db seed",
-    "clear": "npx prisma migrate reset --preview-feature --schema server/database/schema.prisma"
+    "clear": "npx prisma migrate reset --schema server/database/schema.prisma"
+ 
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^0.39.2",
+    "@huntersofbook/naive-ui-nuxt": "^0.7.1",
+    "@iconify-json/logos": "^1.1.31",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^18",
+    "@unocss/nuxt": "^0.52.3",
+    "eslint": "^8.41.0",
+    "nuxt": "3.3.3",
+    "prisma": "4.11.0",
+    "sass": "^1.62.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
@@ -33,19 +46,5 @@
     "pinia": "^2.0.36",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^0.39.2",
-    "@huntersofbook/naive-ui-nuxt": "^0.7.1",
-    "@iconify-json/logos": "^1.1.31",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^18",
-    "@unocss/nuxt": "^0.52.3",
-    "eslint": "^8.41.0",
-    "nuxt": "3.2.2",
-    "prisma": "4.14.1",
-    "sass": "^1.62.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
   }
 }
